--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "gladys"
   ],
   "dependencies": {
-    "node-milight-promise": "0.0.9"
+    "node-milight-promise": "^0.2.3"
   },
   "author": "Pierre-Gilles Leymarie",
   "license": "CC-BY-NC-SA-3.0"
