--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gladys-milight",
-  "version": "0.1.1",
-  "description": "This module enable Milight lamp control in Gladys",
+  "version": "0.1.0",
+  "description": "This module enables Milight lamp control in Gladys",
   "keywords": [
     "milight",
     "lamp",
